# zero2prod

./: .env  .envrc  Cargo.toml  Dockerfile  Makefile  README.md  configuration.yaml  justfile  spec.yaml  sqlx-data.json
.github/workflows/: audit-on-push.yml  general.yml
configuration/: base.yaml  production.yaml
migrations/: 20211017095649_create_subscriptions_table.sql  20211109085543_add_status_to_subscriptions.sql  20211109092540_make_status_not_null_in_subscriptions.sql  20211109100554_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: README.md  health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
