[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "zero2prod"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-http = "=3.0.0-beta.10"
actix-web = "=4.0.0-beta.9"
serde = "1.0.130"

[dev-dependencies]
actix-rt = "=2.3.0"
reqwest = "0.11.5"
tokio = "1"
