[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "zero2prod"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-http = "=3.0.0-beta.10"
actix-web = "=4.0.0-beta.9"
chrono = "0.4.19"
config = "0.11.0"
log = "0.4.14"
serde = "1.0.130"
serde-aux = "1.0.1"
tracing = { version = "0.1.29", features = ["log"] }
tracing-actix-web = "0.4.0-beta.12"
tracing-bunyan-formatter = "0.2.2"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
uuid = { version = "0.8.2", features = ["v4"] }

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
actix-rt = "=2.3.0"
once_cell = "1.8.0"
reqwest = "0.11.5"
tokio = "1"
